# mmoney-cli

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  install.sh  pyproject.toml
.claude/commands/: mmoney.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
docs/: SECURITY.md  SPRINT.md  commands.md  schemas.md
docs/claude-skill/: INSTALL.md  mmoney.md
mmoney_cli/: __init__.py  __main__.py  cli.py
scripts/: setup-dev.sh
tests/: __init__.py  conftest.py  test_cli.py  test_cli_errors.py
